// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card iteration 2 should match the snapshot with all data passed in correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Card
    cardInfo={
        Object {
            "location": "COLORADO",
            "stats": Object {
              "2004": 0.24,
              "2005": 0.278,
              "2006": 0.337,
              "2007": 0.395,
              "2008": 0.536,
              "2009": 0.598,
              "2010": 0.64,
              "2011": 0.672,
              "2012": 0.695,
              "2013": 0.703,
              "2014": 0.741,
            },
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1>
          COLORADO
</h1>,
        <p>
          <li
                    className="red"
          >
                    2004
                    : 
                    0.24
          </li>
          <li
                    className="red"
          >
                    2005
                    : 
                    0.278
          </li>
          <li
                    className="red"
          >
                    2006
                    : 
                    0.337
          </li>
          <li
                    className="red"
          >
                    2007
                    : 
                    0.395
          </li>
          <li
                    className="green"
          >
                    2008
                    : 
                    0.536
          </li>
          <li
                    className="green"
          >
                    2009
                    : 
                    0.598
          </li>
          <li
                    className="green"
          >
                    2010
                    : 
                    0.64
          </li>
          <li
                    className="green"
          >
                    2011
                    : 
                    0.672
          </li>
          <li
                    className="green"
          >
                    2012
                    : 
                    0.695
          </li>
          <li
                    className="green"
          >
                    2013
                    : 
                    0.703
          </li>
          <li
                    className="green"
          >
                    2014
                    : 
                    0.741
          </li>
</p>,
      ],
      "className": "cards clickedcard",
      "onClick": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "COLORADO",
        },
        "ref": null,
        "rendered": "COLORADO",
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <li
              className="red"
>
              2004
              : 
              0.24
</li>,
            <li
              className="red"
>
              2005
              : 
              0.278
</li>,
            <li
              className="red"
>
              2006
              : 
              0.337
</li>,
            <li
              className="red"
>
              2007
              : 
              0.395
</li>,
            <li
              className="green"
>
              2008
              : 
              0.536
</li>,
            <li
              className="green"
>
              2009
              : 
              0.598
</li>,
            <li
              className="green"
>
              2010
              : 
              0.64
</li>,
            <li
              className="green"
>
              2011
              : 
              0.672
</li>,
            <li
              className="green"
>
              2012
              : 
              0.695
</li>,
            <li
              className="green"
>
              2013
              : 
              0.703
</li>,
            <li
              className="green"
>
              2014
              : 
              0.741
</li>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "2004",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "2004",
                ": ",
                0.24,
              ],
              "className": "red",
            },
            "ref": null,
            "rendered": Array [
              "2004",
              ": ",
              0.24,
            ],
            "type": "li",
          },
          Object {
            "instance": null,
            "key": "2005",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "2005",
                ": ",
                0.278,
              ],
              "className": "red",
            },
            "ref": null,
            "rendered": Array [
              "2005",
              ": ",
              0.278,
            ],
            "type": "li",
          },
          Object {
            "instance": null,
            "key": "2006",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "2006",
                ": ",
                0.337,
              ],
              "className": "red",
            },
            "ref": null,
            "rendered": Array [
              "2006",
              ": ",
              0.337,
            ],
            "type": "li",
          },
          Object {
            "instance": null,
            "key": "2007",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "2007",
                ": ",
                0.395,
              ],
              "className": "red",
            },
            "ref": null,
            "rendered": Array [
              "2007",
              ": ",
              0.395,
            ],
            "type": "li",
          },
          Object {
            "instance": null,
            "key": "2008",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "2008",
                ": ",
                0.536,
              ],
              "className": "green",
            },
            "ref": null,
            "rendered": Array [
              "2008",
              ": ",
              0.536,
            ],
            "type": "li",
          },
          Object {
            "instance": null,
            "key": "2009",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "2009",
                ": ",
                0.598,
              ],
              "className": "green",
            },
            "ref": null,
            "rendered": Array [
              "2009",
              ": ",
              0.598,
            ],
            "type": "li",
          },
          Object {
            "instance": null,
            "key": "2010",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "2010",
                ": ",
                0.64,
              ],
              "className": "green",
            },
            "ref": null,
            "rendered": Array [
              "2010",
              ": ",
              0.64,
            ],
            "type": "li",
          },
          Object {
            "instance": null,
            "key": "2011",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "2011",
                ": ",
                0.672,
              ],
              "className": "green",
            },
            "ref": null,
            "rendered": Array [
              "2011",
              ": ",
              0.672,
            ],
            "type": "li",
          },
          Object {
            "instance": null,
            "key": "2012",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "2012",
                ": ",
                0.695,
              ],
              "className": "green",
            },
            "ref": null,
            "rendered": Array [
              "2012",
              ": ",
              0.695,
            ],
            "type": "li",
          },
          Object {
            "instance": null,
            "key": "2013",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "2013",
                ": ",
                0.703,
              ],
              "className": "green",
            },
            "ref": null,
            "rendered": Array [
              "2013",
              ": ",
              0.703,
            ],
            "type": "li",
          },
          Object {
            "instance": null,
            "key": "2014",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "2014",
                ": ",
                0.741,
              ],
              "className": "green",
            },
            "ref": null,
            "rendered": Array [
              "2014",
              ": ",
              0.741,
            ],
            "type": "li",
          },
        ],
        "type": "p",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1>
            COLORADO
</h1>,
          <p>
            <li
                        className="red"
            >
                        2004
                        : 
                        0.24
            </li>
            <li
                        className="red"
            >
                        2005
                        : 
                        0.278
            </li>
            <li
                        className="red"
            >
                        2006
                        : 
                        0.337
            </li>
            <li
                        className="red"
            >
                        2007
                        : 
                        0.395
            </li>
            <li
                        className="green"
            >
                        2008
                        : 
                        0.536
            </li>
            <li
                        className="green"
            >
                        2009
                        : 
                        0.598
            </li>
            <li
                        className="green"
            >
                        2010
                        : 
                        0.64
            </li>
            <li
                        className="green"
            >
                        2011
                        : 
                        0.672
            </li>
            <li
                        className="green"
            >
                        2012
                        : 
                        0.695
            </li>
            <li
                        className="green"
            >
                        2013
                        : 
                        0.703
            </li>
            <li
                        className="green"
            >
                        2014
                        : 
                        0.741
            </li>
</p>,
        ],
        "className": "cards clickedcard",
        "onClick": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "COLORADO",
          },
          "ref": null,
          "rendered": "COLORADO",
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li
                className="red"
>
                2004
                : 
                0.24
</li>,
              <li
                className="red"
>
                2005
                : 
                0.278
</li>,
              <li
                className="red"
>
                2006
                : 
                0.337
</li>,
              <li
                className="red"
>
                2007
                : 
                0.395
</li>,
              <li
                className="green"
>
                2008
                : 
                0.536
</li>,
              <li
                className="green"
>
                2009
                : 
                0.598
</li>,
              <li
                className="green"
>
                2010
                : 
                0.64
</li>,
              <li
                className="green"
>
                2011
                : 
                0.672
</li>,
              <li
                className="green"
>
                2012
                : 
                0.695
</li>,
              <li
                className="green"
>
                2013
                : 
                0.703
</li>,
              <li
                className="green"
>
                2014
                : 
                0.741
</li>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "2004",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "2004",
                  ": ",
                  0.24,
                ],
                "className": "red",
              },
              "ref": null,
              "rendered": Array [
                "2004",
                ": ",
                0.24,
              ],
              "type": "li",
            },
            Object {
              "instance": null,
              "key": "2005",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "2005",
                  ": ",
                  0.278,
                ],
                "className": "red",
              },
              "ref": null,
              "rendered": Array [
                "2005",
                ": ",
                0.278,
              ],
              "type": "li",
            },
            Object {
              "instance": null,
              "key": "2006",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "2006",
                  ": ",
                  0.337,
                ],
                "className": "red",
              },
              "ref": null,
              "rendered": Array [
                "2006",
                ": ",
                0.337,
              ],
              "type": "li",
            },
            Object {
              "instance": null,
              "key": "2007",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "2007",
                  ": ",
                  0.395,
                ],
                "className": "red",
              },
              "ref": null,
              "rendered": Array [
                "2007",
                ": ",
                0.395,
              ],
              "type": "li",
            },
            Object {
              "instance": null,
              "key": "2008",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "2008",
                  ": ",
                  0.536,
                ],
                "className": "green",
              },
              "ref": null,
              "rendered": Array [
                "2008",
                ": ",
                0.536,
              ],
              "type": "li",
            },
            Object {
              "instance": null,
              "key": "2009",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "2009",
                  ": ",
                  0.598,
                ],
                "className": "green",
              },
              "ref": null,
              "rendered": Array [
                "2009",
                ": ",
                0.598,
              ],
              "type": "li",
            },
            Object {
              "instance": null,
              "key": "2010",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "2010",
                  ": ",
                  0.64,
                ],
                "className": "green",
              },
              "ref": null,
              "rendered": Array [
                "2010",
                ": ",
                0.64,
              ],
              "type": "li",
            },
            Object {
              "instance": null,
              "key": "2011",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "2011",
                  ": ",
                  0.672,
                ],
                "className": "green",
              },
              "ref": null,
              "rendered": Array [
                "2011",
                ": ",
                0.672,
              ],
              "type": "li",
            },
            Object {
              "instance": null,
              "key": "2012",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "2012",
                  ": ",
                  0.695,
                ],
                "className": "green",
              },
              "ref": null,
              "rendered": Array [
                "2012",
                ": ",
                0.695,
              ],
              "type": "li",
            },
            Object {
              "instance": null,
              "key": "2013",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "2013",
                  ": ",
                  0.703,
                ],
                "className": "green",
              },
              "ref": null,
              "rendered": Array [
                "2013",
                ": ",
                0.703,
              ],
              "type": "li",
            },
            Object {
              "instance": null,
              "key": "2014",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "2014",
                  ": ",
                  0.741,
                ],
                "className": "green",
              },
              "ref": null,
              "rendered": Array [
                "2014",
                ": ",
                0.741,
              ],
              "type": "li",
            },
          ],
          "type": "p",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`CardContainer iteration 2 should match the snapshot with all data passed in correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CardContainer
    appState={
        Object {
            "data": Array [
              Object {
                "location": "COLORADO",
                "stats": Object {
                  "2004": 0.24,
                  "2005": 0.278,
                  "2006": 0.337,
                  "2007": 0.395,
                  "2008": 0.536,
                  "2009": 0.598,
                  "2010": 0.64,
                  "2011": 0.672,
                  "2012": 0.695,
                  "2013": 0.703,
                  "2014": 0.741,
                },
              },
              Object {
                "location": "ACADEMY 20",
                "stats": Object {
                  "2004": 0.24,
                  "2005": 0.278,
                  "2006": 0.337,
                  "2007": 0.395,
                  "2008": 0.536,
                  "2009": 0.598,
                  "2010": 0.64,
                  "2011": 0.672,
                  "2012": 0.695,
                  "2013": 0.703,
                  "2014": 0.741,
                },
              },
              Object {
                "location": "ADAMS COUNTY 14",
                "stats": Object {
                  "2004": 0.24,
                  "2005": 0.278,
                  "2006": 0.337,
                  "2007": 0.395,
                  "2008": 0.536,
                  "2009": 0.598,
                  "2010": 0.64,
                  "2011": 0.672,
                  "2012": 0.695,
                  "2013": 0.703,
                  "2014": 0.741,
                },
              },
            ],
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Card
          cardInfo={
                    Object {
                              "location": "COLORADO",
                              "stats": Object {
                                "2004": 0.24,
                                "2005": 0.278,
                                "2006": 0.337,
                                "2007": 0.395,
                                "2008": 0.536,
                                "2009": 0.598,
                                "2010": 0.64,
                                "2011": 0.672,
                                "2012": 0.695,
                                "2013": 0.703,
                                "2014": 0.741,
                              },
                            }
          }
          className="cards"
          displaySelected={undefined}
/>,
        <Card
          cardInfo={
                    Object {
                              "location": "ACADEMY 20",
                              "stats": Object {
                                "2004": 0.24,
                                "2005": 0.278,
                                "2006": 0.337,
                                "2007": 0.395,
                                "2008": 0.536,
                                "2009": 0.598,
                                "2010": 0.64,
                                "2011": 0.672,
                                "2012": 0.695,
                                "2013": 0.703,
                                "2014": 0.741,
                              },
                            }
          }
          className="cards"
          displaySelected={undefined}
/>,
        <Card
          cardInfo={
                    Object {
                              "location": "ADAMS COUNTY 14",
                              "stats": Object {
                                "2004": 0.24,
                                "2005": 0.278,
                                "2006": 0.337,
                                "2007": 0.395,
                                "2008": 0.536,
                                "2009": 0.598,
                                "2010": 0.64,
                                "2011": 0.672,
                                "2012": 0.695,
                                "2013": 0.703,
                                "2014": 0.741,
                              },
                            }
          }
          className="cards"
          displaySelected={undefined}
/>,
      ],
      "className": "cardContainer",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "COLORADO",
        "nodeType": "function",
        "props": Object {
          "cardInfo": Object {
            "location": "COLORADO",
            "stats": Object {
              "2004": 0.24,
              "2005": 0.278,
              "2006": 0.337,
              "2007": 0.395,
              "2008": 0.536,
              "2009": 0.598,
              "2010": 0.64,
              "2011": 0.672,
              "2012": 0.695,
              "2013": 0.703,
              "2014": 0.741,
            },
          },
          "className": "cards",
          "displaySelected": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "ACADEMY 20",
        "nodeType": "function",
        "props": Object {
          "cardInfo": Object {
            "location": "ACADEMY 20",
            "stats": Object {
              "2004": 0.24,
              "2005": 0.278,
              "2006": 0.337,
              "2007": 0.395,
              "2008": 0.536,
              "2009": 0.598,
              "2010": 0.64,
              "2011": 0.672,
              "2012": 0.695,
              "2013": 0.703,
              "2014": 0.741,
            },
          },
          "className": "cards",
          "displaySelected": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "ADAMS COUNTY 14",
        "nodeType": "function",
        "props": Object {
          "cardInfo": Object {
            "location": "ADAMS COUNTY 14",
            "stats": Object {
              "2004": 0.24,
              "2005": 0.278,
              "2006": 0.337,
              "2007": 0.395,
              "2008": 0.536,
              "2009": 0.598,
              "2010": 0.64,
              "2011": 0.672,
              "2012": 0.695,
              "2013": 0.703,
              "2014": 0.741,
            },
          },
          "className": "cards",
          "displaySelected": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Card
            cardInfo={
                        Object {
                                    "location": "COLORADO",
                                    "stats": Object {
                                      "2004": 0.24,
                                      "2005": 0.278,
                                      "2006": 0.337,
                                      "2007": 0.395,
                                      "2008": 0.536,
                                      "2009": 0.598,
                                      "2010": 0.64,
                                      "2011": 0.672,
                                      "2012": 0.695,
                                      "2013": 0.703,
                                      "2014": 0.741,
                                    },
                                  }
            }
            className="cards"
            displaySelected={undefined}
/>,
          <Card
            cardInfo={
                        Object {
                                    "location": "ACADEMY 20",
                                    "stats": Object {
                                      "2004": 0.24,
                                      "2005": 0.278,
                                      "2006": 0.337,
                                      "2007": 0.395,
                                      "2008": 0.536,
                                      "2009": 0.598,
                                      "2010": 0.64,
                                      "2011": 0.672,
                                      "2012": 0.695,
                                      "2013": 0.703,
                                      "2014": 0.741,
                                    },
                                  }
            }
            className="cards"
            displaySelected={undefined}
/>,
          <Card
            cardInfo={
                        Object {
                                    "location": "ADAMS COUNTY 14",
                                    "stats": Object {
                                      "2004": 0.24,
                                      "2005": 0.278,
                                      "2006": 0.337,
                                      "2007": 0.395,
                                      "2008": 0.536,
                                      "2009": 0.598,
                                      "2010": 0.64,
                                      "2011": 0.672,
                                      "2012": 0.695,
                                      "2013": 0.703,
                                      "2014": 0.741,
                                    },
                                  }
            }
            className="cards"
            displaySelected={undefined}
/>,
        ],
        "className": "cardContainer",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "COLORADO",
          "nodeType": "function",
          "props": Object {
            "cardInfo": Object {
              "location": "COLORADO",
              "stats": Object {
                "2004": 0.24,
                "2005": 0.278,
                "2006": 0.337,
                "2007": 0.395,
                "2008": 0.536,
                "2009": 0.598,
                "2010": 0.64,
                "2011": 0.672,
                "2012": 0.695,
                "2013": 0.703,
                "2014": 0.741,
              },
            },
            "className": "cards",
            "displaySelected": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "ACADEMY 20",
          "nodeType": "function",
          "props": Object {
            "cardInfo": Object {
              "location": "ACADEMY 20",
              "stats": Object {
                "2004": 0.24,
                "2005": 0.278,
                "2006": 0.337,
                "2007": 0.395,
                "2008": 0.536,
                "2009": 0.598,
                "2010": 0.64,
                "2011": 0.672,
                "2012": 0.695,
                "2013": 0.703,
                "2014": 0.741,
              },
            },
            "className": "cards",
            "displaySelected": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "ADAMS COUNTY 14",
          "nodeType": "function",
          "props": Object {
            "cardInfo": Object {
              "location": "ADAMS COUNTY 14",
              "stats": Object {
                "2004": 0.24,
                "2005": 0.278,
                "2006": 0.337,
                "2007": 0.395,
                "2008": 0.536,
                "2009": 0.598,
                "2010": 0.64,
                "2011": 0.672,
                "2012": 0.695,
                "2013": 0.703,
                "2014": 0.741,
              },
            },
            "className": "cards",
            "displaySelected": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
